examples/test/testpolicy15993.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15993
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key22: value22
      key28: value6
      key1: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value0
          key44: value16
      podSelector:
        matchLabels:
          key37: value33
